// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Toggle /> create toggle component 1`] = `
<div
  className="fd-form-item"
>
  <label
    className="fd-form-label"
  >
    <span
      className="fd-toggle"
    >
      <input
        checked={false}
        className="fd-toggle__input"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="fd-toggle__switch"
        role="presentation"
      />
    </span>
    Normal toggle
    
  </label>
</div>
`;

exports[`<Toggle /> create toggle component 2`] = `
<div
  className="fd-form-item blue"
>
  <label
    className="fd-form-label"
  >
    <span
      className="fd-toggle fd-toggle--s"
    >
      <input
        checked={true}
        className="fd-toggle__input"
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="fd-toggle__switch"
        role="presentation"
      />
    </span>
    Small toggle
    
  </label>
</div>
`;

exports[`<Toggle /> create toggle component 3`] = `
<div
  className="fd-form-item"
>
  <label
    className="fd-form-label is-disabled"
  >
    <span
      className="fd-toggle"
    >
      <input
        checked={false}
        className="fd-toggle__input"
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="fd-toggle__switch"
        role="presentation"
      />
    </span>
    Normal toggle
    
  </label>
</div>
`;

exports[`<Toggle /> create toggle component 4`] = `
<div
  className="fd-form-item"
>
  <label
    className="fd-form-label is-disabled"
  >
    <span
      className="fd-toggle"
    >
      <input
        checked={true}
        className="fd-toggle__input"
        disabled={true}
        onChange={[Function]}
        type="checkbox"
      />
      <span
        className="fd-toggle__switch"
        role="presentation"
      />
    </span>
    Normal toggle
    
  </label>
</div>
`;
